# rust-ruby-poc

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  rust_poc.gemspec
lib/: rust_poc.rb
lib/rust_poc/: ffi.rb  librust_poc.dylib  version.rb
spec/: rust_poc_spec.rb  spec_helper.rb
src/: lib.rs
