[package]
authors = ["Mukund Madhav <mukund.madhav@box8.in>"]
edition = "2018"
name = "rust_poc"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
tokio = { version = "0.2", features = ["macros"] }
